--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,82 @@
 body {
-    padding: 0;
-    margin: 10%;
+  margin: 0;
+  padding: 0;
+  background-color: #6946e8;
+  font-size: 14px;
+  font-family: "Montserrat", sans-serif;
+  /*bg bild*/
+  /* background-size: cover; */
+  min-width: 100vh;
+  overflow: hidden;
 }
 
-.expandeble-container{
-    background-color: hsl(0, 0%, 80%);
-    position: relative;
-    border: 5px solid peru;
-    
-    width: 600px;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.trigger-header {
-    height: 70px;
-    width: 600px;
-    border: 1px solid hsl(0, 0%, 0%);
-    background-color: hsl(204, 100%, 28%);
+.wrapper {
+  display: flex;
+  padding-top: 50px;
+  justify-content: center;
 }
 
-.trigger-header:hover{
+.collapsible {
+  max-width: 450px;
+  overflow: hidden;
+  font-weight: 500;
 }
 
-.content{
-    height: 400px;
-    width: 600px;
-    border: 1px solid black;
-    background-color: hsl(188, 100%, 47%);
-    color: white;
-    font-size: 2rem;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-    position: absolute;
-    top: -1000%;
+.collapsible label {
+  position: relative;
+  font-weight: 600;
+  background-color: white;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1), 0 4px 11px 0 rgba(0, 0, 0, 0.08);
+  color: #1c1c6b;
+  display: block;
+  margin-bottom: 10px;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 4px;
+  user-select: none;
 }
 
-#dropdown-trigger {
-    /* display: none; */
+.collapsible label:after {
+  content: "";
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  width: 18px;
+  height: 18px;
+  background: url(arrow.svg) no-repeat 0 0;
 }
 
-#dropdown-trigger:checked ~ .content {
-    top:50%;
+.collapsible-text {
+  max-height: 1px;
+  overflow: hidden;
+  border-radius: 4px;
+  line-height: 1.4;
+  position: relative;
+  top: -100%;
+  transition: all 0.5s ease;
 }
 
-.checkbox {
-    height: 30px;
+.collapsible input:checked ~ .collapsible-text {
+  max-height: 300px;
+  padding-bottom: 25px;
+  background-color: white;
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1), 0 4px 11px 0 rgba(0, 0, 0, 0.08);
+  opacity: 1;
+  top: 0;
+}
 
-}   
+.collapsible-text h2 {
+  margin-bottom: 10px;
+  padding: 15px 15px 0;
+  color: #1c1c6b;
+}
+
+.collapsible-text p {
+  padding-left: 15px;
+  padding-right: 15px;
+}
