--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,14 @@
+:root {
+  --hip-blue: #001e63;
+}
+
 body {
   margin: 0;
   padding: 0;
   background-color: #6946e8;
   font-size: 14px;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
+    color: var(--hip-blue);
   /*bg bild*/
   /* background-size: cover; */
   min-width: 100vh;
@@ -16,15 +21,20 @@ body {
 }
 
 .wrapper {
-  display: flex;
   padding-top: 50px;
   justify-content: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .collapsible {
-  max-width: 450px;
+  max-width: 600px;
   overflow: hidden;
   font-weight: 500;
+}
+
+.collapsible input {
+  display: none;
 }
 
 .collapsible label {
@@ -39,6 +49,7 @@ body {
   padding: 15px;
   border-radius: 4px;
   user-select: none;
+  z-index: 1;
 }
 
 .collapsible label:after {
@@ -51,7 +62,12 @@ body {
   background: url(arrow.svg) no-repeat 0 0;
 }
 
-.collapsible-text {
+.collapsible input:checked + label:after {
+  transform: rotate(90deg);
+  transition: all 0.5s ease;
+}
+
+.collapsible-section {
   max-height: 1px;
   overflow: hidden;
   border-radius: 4px;
@@ -61,12 +77,11 @@ body {
   transition: all 0.5s ease;
 }
 
-.collapsible input:checked ~ .collapsible-text {
+.collapsible input:checked ~ .collapsible-section {
   max-height: 300px;
   padding-bottom: 25px;
   background-color: white;
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1), 0 4px 11px 0 rgba(0, 0, 0, 0.08);
-  opacity: 1;
   top: 0;
 }
 
@@ -79,4 +94,104 @@ body {
 .collapsible-text p {
   padding-left: 15px;
   padding-right: 15px;
+}
+
+
+/* *********************************STYLES SPECIFICALLY FOR SECTION 1************************************ */
+.section-one-container {
+  width: 100%;
+  display: flex;
+}
+
+
+.content-container-left {
+  width: 50%;
+}
+
+
+.section-one-container .content-container-left{
+  display: flex;
+  flex-direction: column;
+  gap : 1rem;
+}
+
+
+.section-one-data-row{
+  width: 100%;
+  display: flex;
+}
+
+.category-text{
+  font-weight: 800;
+  width: 40%;
+}
+
+
+.progress-bar-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 100%;
+}
+
+.progress-bar-container {
+  display: flex;
+  align-items: center;
+}
+
+.text-container-progress-bar {
+  width: 30%;
+}
+
+.progress-bar-section {
+  height: 100%;
+}
+
+
+.text-progress-bar {
+  margin: 0.8rem 0.5rem 0rem 0.8rem;
+}
+
+.bold-text {
+  font-weight: 800;
+  margin-bottom: 0.2rem;
+}
+
+.content-container-right {
+  display: flex;
+  width: 50%;
+}
+
+.progress-bar-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
+  margin-top: 0.8rem;
+}
+
+.progress-bar {
+  width: 80%;
+  height: 10px;
+  border: solid 1px;
+  border-radius: 5px;
+  margin-top: 0.5rem;
+  position: relative;
+}
+
+.progress-bar.support::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 35%;
+  background-color: var(--hip-blue);
+  border-radius: 5px 0 0 5px;
+}
+
+.progress-bar.cushioning {
+  background-color: var(--hip-blue);
+  ;
 }
