--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,18 @@
 :root {
   --hip-blue: #001e63;
+  --suttle-black: hsl(0, 0%, 20%);
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
+  display: flex;
+  justify-content: center;
   margin: 0;
   padding: 0;
-  background-color: #6946e8;
-  font-size: 14px;
-  font-family: "Roboto", sans-serif;
-    color: var(--hip-blue);
-  /*bg bild*/
-  /* background-size: cover; */
-  min-width: 100vh;
-  overflow: hidden;
+  background-color: white;
+  color: var(--hip-blue);
+  width: 100%;
+  overflow: auto; 
 }
 
 * {
@@ -22,15 +22,18 @@ body {
 
 .wrapper {
   padding-top: 50px;
-  justify-content: center;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
+  width: 70%;
 }
 
 .collapsible {
-  max-width: 600px;
+  width: 100%;
   overflow: hidden;
   font-weight: 500;
+  padding-bottom: 8px;
 }
 
 .collapsible input {
@@ -40,8 +43,9 @@ body {
 .collapsible label {
   position: relative;
   font-weight: 600;
+  font-size: 1.3rem;
   background-color: white;
-  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.1), 0 4px 11px 0 rgba(0, 0, 0, 0.08);
+  box-shadow: -3px 3px 5px 0 rgba(0, 0, 0, 0.1);
   color: #1c1c6b;
   display: block;
   margin-bottom: 10px;
@@ -50,21 +54,22 @@ body {
   border-radius: 4px;
   user-select: none;
   z-index: 1;
+  border: solid 1px hsl(0, 0%, 95%);
 }
 
 .collapsible label:after {
   content: "";
   position: absolute;
   right: 15px;
-  top: 15px;
-  width: 18px;
-  height: 18px;
-  background: url(arrow.svg) no-repeat 0 0;
+  top: 16px;
+  width: 22px;
+  height: 22px;
+  background: url(images/arrow.svg) no-repeat 0 0;
 }
 
 .collapsible input:checked + label:after {
   transform: rotate(90deg);
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 
 .collapsible-section {
@@ -74,10 +79,18 @@ body {
   line-height: 1.4;
   position: relative;
   top: -100%;
-  transition: all 0.5s ease;
+  transition: all 0.3s ease;
 }
 
-.collapsible input:checked ~ .collapsible-section {
+input[type="checkbox"]:checked + label + .collapsible-section {
+  max-height: 1000px;
+  padding-bottom: 25px;
+  background-color: white;
+  
+  top: 0;
+}
+
+input[type="checkbox"]:checked + label + .collapsible-section2 {
   max-height: 300px;
   padding-bottom: 25px;
   background-color: white;
@@ -85,22 +98,13 @@ body {
   top: 0;
 }
 
-.collapsible-text h2 {
-  margin-bottom: 10px;
-  padding: 15px 15px 0;
-  color: #1c1c6b;
-}
-
-.collapsible-text p {
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-
 /* *********************************STYLES SPECIFICALLY FOR SECTION 1************************************ */
 .section-one-container {
   width: 100%;
+  padding-top: 1rem;
   display: flex;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 
@@ -187,11 +191,172 @@ body {
   left: 0;
   height: 100%;
   width: 35%;
-  background-color: var(--hip-blue);
+  background-color: var(--suttle-black);
   border-radius: 5px 0 0 5px;
 }
 
 .progress-bar.cushioning {
-  background-color: var(--hip-blue);
+  background-color: var(--suttle-black);
   ;
+}
+
+/* *********************************STYLES SPECIFICALLY FOR SECTION 2************************************ */
+
+.medium-size-text {
+  font-size: 1.1rem;
+  font-weight: 400;
+  margin-bottom: 0.2rem;
+}
+
+.section-two-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  margin-top: 1rem;
+}
+
+.section-two-container {
+  display: flex;
+  gap: 1.5rem;
+  padding: 0px;
+}
+
+.content-container-left img {
+  width: 60%;
+}
+
+.section-two-container .content-container-left {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-two-container .content-container-right {
+  display: flex;
+  flex-direction: column;
+}
+
+.header-with-text {
+  margin: 0.5rem 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2rem;
+}
+
+.header-with-text p {
+  margin: 0;
+}
+
+
+/* *********************************STYLES SPECIFICALLY FOR SECTION 3************************************ */
+.section-three-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0px;
+}
+
+.section-three-container .content-container-row {
+  display: flex;
+  gap: 2rem;
+  padding: 0.8rem 0;
+}
+
+.section-three-container .row-left,
+.section-three-container .row-right {
+  width: 50%;
+  padding: 0 2rem;
+}
+
+.section-three-container .content-container-right {
+  border: solid 1px red;
+}
+
+/* *********************************STYLES SPECIFICALLY FOR SECTION 4************************************ */
+.centered-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.centered-header h3 {
+  margin: 0;
+}
+
+.section-four-container .content-container-row {
+  display: flex;
+  gap: 2rem;
+}
+
+.section-four-container .row-left,
+.section-four-container .row-right {
+  padding: 0 1.5rem;
+}
+
+/* *********************************STYLES FOR DIFFERENT DEVICES************************************ */
+
+/* FOR PHONE */
+@media (max-width: 767px) {
+  
+  .section-one-container {
+      border: solid 1px solid red;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+  }
+
+  .content-container-left {
+      width: 100%;
+  }
+
+  .section-one-data-row {
+      width: 100%;
+      display: flex;
+  }
+  .section-one-container .category-text {
+      width: 35%;
+  }
+
+  .section-one-container .content-container-right {
+      width: 100%;
+  }
+
+  .text-container-progress-bar {
+      width: 40%
+  }
+
+  .section-two-container {
+      display: flex;
+      flex-direction: column;
+  }
+
+  .section-three-container .content-container-row {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      width: 100%;
+      padding: 0 10px;
+  }
+
+  .section-three-container .row-left,
+  .section-three-container .row-right {
+      width: 100%;
+      padding: 0;
+  }
+
+  .section-four-container .content-container-row {
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+  }
+
+}
+
+/* FOR DESKTOP */
+@media (min-width: 1024px) {
+  .wrapper {
+      width: 40vw;
+  }
 }
